# anki-tui

./: Cargo.toml
src/: answer.rs  cli.yml  decks.rs  main.rs  note.rs  notetype.rs  review.rs  util.rs  view_card.rs
src/note/: add.rs  edit.rs  mod.rs
