[package]
name = "anki-tui"
version = "0.1.0"
authors = ["Mattori Birnbaum <mattori.birnbaum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anki = { git = "https://github.com/PsychicNoodles/anki.git", branch = "release/2.1.42" }
prost = "0.7"
bytes = "1.0.1"
dirs = "3.0.1"
clap = "2.33.3"
serde = "1.0.124"
serde_json = "1.0.64"
serde_derive = "1.0.124"

[build-dependencies]
fluent-syntax = "0.10"
prost-build = "0.7"
