[package]
name = "anki-tui"
version = "0.1.0"
authors = ["Mattori Birnbaum <mattori.birnbaum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anki = { git = "https://github.com/PsychicNoodles/anki.git", branch = "release/2.1.42" }
prost = "0.7"
dirs = "3.0.1"
clap = {version = "2.33", features = ["yaml"]}
serde = {version = "1.0.124", features = ["rc"]}
serde_json = "1.0.64"
serde_derive = "1.0.124"
serde_with = "1.7.0"
slog = "2.7.0"
slog-term = "2.8.0"
slog-envlogger = "2.2.0"
slog-async = "2.6.0"
derive_more = "0.99.13"
config = "0.11.0"
thiserror = "1.0"

[build-dependencies]
fluent-syntax = "0.10"
prost-build = "0.7"
